Basic functionality, before parser.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
+<!doctype html>
 <html>
 	<head>
 		<title>Clover Cube Solution</title>
 	
 		<script src="js/three.min.js"></script>
 		<script src="cube.js"></script>
-      <link href="style.css" rel="stylesheet" type="text/css">
+      <link href="style.css" rel="stylesheet" type="text/css" />
+		<meta charset="UTF-8" />
    </head>
 	<body> 
 		<script src="js/OrbitControls.js"></script>
       Hi
-      <div id="one" tabindex="1" class="cube-demo"><script>showCube("one")</script></div>
+      <div id="one" tabindex="1" class="cube-demo">
+			<script>showCube("one")</script>
+		</div>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porttitor 
       Josh
             
