added 'endSolved' and applyRotationsImmediately

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 		<script src="js/OrbitControls.js"></script>
       Hi
       <div id="one" tabindex="1" class="cube-demo">
-			<script>showCube("one")</script>
+			<script>showCube( "BR3, RW3, RG3, RY3" )</script>
 		</div>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porttitor 
+		<div id="two" tabindex="1" class="cube-demo">
+			<script>showCube( "BR3, RW3, RG3, RY3" )</script>
+		</div>
       Josh
             
   
