simplified move-code, setup 3 moves.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
    </head>
 	<body> 
 		<script src="js/OrbitControls.js"></script>
-      Hi
-      <div id="one" tabindex="1" class="cube-demo">
-			<script>showCube( "BR3, RW3, RG3, RY3" )</script>
+      <div id="rotate-corners" class="cube-demo">
+			<script>showCube( "BO, OW, OY-3, GO, OW-3, OY, BO, OW, OY-3, GO, OW-3, OY" )</script>
 		</div>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porttitor 
-		<div id="two" tabindex="1" class="cube-demo">
-			<script>showCube( "BR3, RW3, RG3, RY3" )</script>
+		<div id="position-corners" class="cube-demo">
+			<script>showCube( "OY, OB, OW, OB, OY, OB, OW, OB" )</script>
 		</div>
-      Josh
+		<div id="swap-faces" class="cube-demo">
+			<script>showCube( "OW1, BO2, OW3, BO-2, OW2" )</script>
+		</div>
             
   
 	</body>
