--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta charset="UTF-8" />
    </head>
 	<body> 
+      <h1>JoshuaD's Clover Cube Solution</h1>
 		<script src="js/OrbitControls.js"></script>
       <div id="rotate-corners" class="cube-demo">
 			<script>showCube( "BO, OW, OY-3, GO, OW-3, OY, BO, OW, OY-3, GO, OW-3, OY" )</script>
